data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/ComponentScatteredFeaturePieces.SwampHut.md
---
title: "ComponentScatteredFeaturePieces.SwampHut"
description: "public static class ComponentScatteredFeaturePieces.SwampHut extends StructureComponent"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/ComponentScatteredFeaturePieces.SwampHut.html"
sourceType: javadoc
---

# ComponentScatteredFeaturePieces.SwampHut

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.ComponentScatteredFeaturePieces.SwampHut

## Class signature

```java
public static class ComponentScatteredFeaturePieces.SwampHut extends StructureComponent
```

## Constructors

- `SwampHut()`
- `SwampHut(java.util.Random p_i2066_1_, int p_i2066_2_, int p_i2066_3_)`

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `protected boolean func_74935_a(World p_74935_1_, StructureBoundingBox p_74935_2_, int p_74935_3_)`

## Fields

- `protected int field_74936_d`
- `protected int scatteredFeatureSizeX`
- `protected int scatteredFeatureSizeY`
- `protected int scatteredFeatureSizeZ`
